--- a/css/harry.css
+++ b/css/harry.css
@@ -7,48 +7,49 @@ body {
 }
 
 #body {
-    margin: 20px;
-    margin-top: 15%;
+    margin: 1.5vw;
+    margin-top: calc(14vw);
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
-    border-radius: 50px;
+    border-radius: 5vw;
 }
 
 #body h1 {
     color: black;
+    font-size: 2.5vw;
 }
 
 img {
     width: 25%;
     border-radius: 10%;
-    margin: 20px;
+    margin: 1.5vw;
 }
 
 p {
-    font-size: 120%;
-    margin: 20px;
+    font-size: 1.5vw;
+    margin: 1.5vw;
 }
 
 ul {
-    font-size: 120%;
-    margin: 20px;
+    font-size: 1.5vw;
+    margin: 1.5vw;
     margin-left: 5%;
-    padding: 20px;
+    padding: 1.5vw;
     text-align: left;
 }
 
 ol {
-    font-size: 120%;
-    margin: 20px;
+    font-size: 1.5vw;
+    margin: 1.5vw;
     margin-left: 5%;
-    padding: 20px;
+    padding: 1.5vw;
     text-align: left;
 
 }
 
 #ejemplo {
-    font-size: 110%;
+    font-size: 1.25vw;
     margin: 4% auto;
     padding: 20px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -59,18 +60,19 @@ ol {
 
 #renglon1 {
     text-indent: 2%;
-    font-size: 110%;
+    font-size: 1.25vw;
 }
 
 #renglon2 {
-    font-size: 110%;
+    font-size: 1.25vw;
     text-indent: 4%;
 }
 
 #bibliografia {
-    font-size: 110%;
-    margin: 20px;
-    padding: 20px;
+    font-size: 1.25vw;
+    margin: 1.5vw;
+    margin-top: 10vw;
+    padding: 1.5vw;
     /* background-color: rgba(255, 255, 255, 0.8); */
     font-style: italic;
 }
