--- a/css/harry.css
+++ b/css/harry.css
@@ -17,22 +17,22 @@ body {
 
 #body h1 {
     color: black;
-    font-size: 2.5vw;
+    font-size: 5.5vh;
 }
 
 img {
-    width: 25%;
+    width: 250px;
     border-radius: 10%;
-    margin: 1.5vw;
+    margin: 5vh;
 }
 
 p {
-    font-size: 1.5vw;
+    font-size: 3.25vh;
     margin: 1.5vw;
 }
 
 ul {
-    font-size: 1.5vw;
+    font-size: 3.25vh;
     margin: 1.5vw;
     margin-left: 5%;
     padding: 1.5vw;
@@ -40,7 +40,7 @@ ul {
 }
 
 ol {
-    font-size: 1.5vw;
+    font-size: 3.25vh;
     margin: 1.5vw;
     margin-left: 5%;
     padding: 1.5vw;
@@ -49,30 +49,35 @@ ol {
 }
 
 #ejemplo {
-    font-size: 1.25vw;
-    margin: 4% auto;
-    padding: 20px;
+    margin: 5vh auto;
+    padding: 1.5vw;
     background-color: rgba(255, 255, 255, 0.8);
     text-align: left;
-    width: 50%;
+    width: max-content;
     font-family: 'Courier New', Courier, monospace;
+}
+
+#ejemplo p {
+    font-size: 90%;
+    /* margin: 1.5vw; */
 }
 
 #renglon1 {
     text-indent: 2%;
-    font-size: 1.25vw;
+    font-size: 90%;
 }
 
 #renglon2 {
-    font-size: 1.25vw;
     text-indent: 4%;
+    font-size: 90%;
 }
 
 #bibliografia {
-    font-size: 1.25vw;
+    font-size: 2.75vh;
     margin: 1.5vw;
-    margin-top: 10vw;
+    margin-top: 22vh;
     padding: 1.5vw;
     /* background-color: rgba(255, 255, 255, 0.8); */
     font-style: italic;
+    overflow-wrap: break-word;
 }
