--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,16 @@
+nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #222222;
+  padding: 10px;
+  width: 100%;
+  position: fixed;
+  /* Para que el menú sea estático */
+  top: 0%;
+  /* Para que el menú sea estático */
+}
+
 #titulo {
   text-decoration: none;
   font-size: 1.75vw;
@@ -9,18 +22,8 @@ h1 {
   text-align: center;
 }
 
-nav {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #222222;
-  padding: 10px;
-  position: fixed;
-  /* Para que el menú sea estático */
-  width: 100%;
-  /* Para que el menú sea esatático */
-  top: 0%;
-  /* Para que el menú sea estático */
+#cabecera img {
+  display: none;
 }
 
 nav ul {
@@ -82,4 +85,31 @@ li div img {
 
 .dropdown:hover .dropdown-content {
   display: block;
+}
+
+@media screen and (max-width: 1080px) {
+  #cabecera {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 85% 15%;
+  }
+
+  #titulo {
+    font-size: 3.5vw;
+  }
+
+  #cabecera img {
+    display: block;
+    width: 7.5vw;
+    margin: 2.5vw;
+  }
+
+  .dropdown {
+    display: none;
+  }
+  
+  .boton-menu-oculto:hover .dropdown {
+    display: block;
+    position: relative;
+  }
 }
