--- a/css/menu.css
+++ b/css/menu.css
@@ -4,10 +4,10 @@ nav {
   align-items: center;
   background-color: #222222;
   padding: 10px;
-  width: 100%;
-  position: fixed;
+  /* width: 100%; */
+  /* position: fixed; */
   /* Para que el menú sea estático */
-  top: 0%;
+  /* top: 0%; */
   /* Para que el menú sea estático */
 }
 
@@ -107,7 +107,7 @@ li div img {
   .dropdown {
     display: none;
   }
-  
+
   .boton-menu-oculto:hover .dropdown {
     display: block;
     position: relative;
