--- a/css/menu.css
+++ b/css/menu.css
@@ -87,6 +87,21 @@ li div img {
   display: block;
 }
 
+.dropdown-content-content {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  background-color: #444444;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.subsubmenu:hover .dropdown-content-content {
+  display: block;
+}
+
 @media screen and (max-width: 1080px) {
   #cabecera {
     display: grid;
